--- a/css/agency.css
+++ b/css/agency.css
@@ -654,6 +654,7 @@ section#contact :-ms-input-placeholder {
 .footer {
   padding: 25px 0;
   text-align: center;
+  border-top: 2px solid black;
 }
 
 .footer span.copyright {
@@ -701,11 +702,35 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 }
 
 #team img{
-  transform: rotate(90deg);
+  width: 300px;
+  height: 300px;
 }
 
 .services {
   background: white;
   padding: 10px;
   box-shadow: 10px 13px 18px -2px rgba(0,0,0,0.75);
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.embed-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.link-pedabot {
+  color: black !important;
+}
+
+.link-pedabot:hover {
+  color: #fed136 !important;
 }
